2012-02-28  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/autoconf/ax_boost_base.m4: Macro for BOOST detection.

2012-02-28  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	Provide --enable-hls mode. When using the HLS mode, this flag has
	to be turned on. It makes PoCC depend on Rose and BOOST when
	activated at configure time.

	* driver/pocc/include/pocc/driver-hlsir.h,
	* driver/pocc/driver-hlsir.cc: New. HLS pass (dummy).

	* configure.ac,
	* driver/pocc/Makefile.am: Update to support HLS mode.

	* config/hls/configure.cfg,
	* config/hls/driver.cfg: New. Configuration for HLS. Supports
	native Barvinok (including NTL) and the hlsir module.

2012-02-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* configure.ac,
	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am: Provide --enable-barvinok flag.

	* bin/pocc-make: Allow for 'disabled' configure feature.

2011-12-01  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* generators/scripts/inscop: Fix a bug in undef of math macros.

2011-10-20  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

        * driver/pocc/driver-pastops.c: Add function to
	collect_all_full_tiles.

2011-08-29  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/pocc/driver-cloog.c,
	* driver/src/options.h,
	* driver/src/options.c: Add option --print-cloog-file, which dumps
	on stderr the CLooG input file.

2011-08-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/src/options.h,
	* driver/src/options.c: Support --vectorizer option in stable mode.

2011-08-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/src/options.c: Fix incorrect strcat use.

2011-08-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/src/Makefile.am: Add missing explicit link to pocc-utils.

2011-07-29  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/driver-ptile.c,