@@ -106,7 +106,7 @@ location: https://alchemy.saclay.inria.fr/svn/users/pouchet/projects/letsee-proj
 retrieve-method: svn
 bootstrap: ./autogen.sh
 configure: --prefix=$poccsrcdir/math/install-polylib --with-libgmp=$poccsrcdir/math/external/install --enable-MP --enable-longlongint-lib
-make-depends: 
+make-depends:
 
 [piplib]
 category: math
@@ -146,15 +146,15 @@ category: math
 module: barvinok
 location: http://www.kotnet.org/~skimo/barvinok/barvinok-0.35.tar.gz
 retrieve-method: wget
-configure: --with-libgmp=$poccsrcdir/math/external/install --with-ntl=$poccsrcdir/math/external/install
+configure: --with-libgmp=$poccsrcdir/math/external/install --with-ntl=$poccsrcdir/math/external/install --enable-shared-barvinok
 make-depends: isl ntl
-	      
+
 
 [ntl]
 category: math
 module: ntl
 location: http://shoup.net/ntl/ntl-5.5.2.tar.gz
-retrieve-method: wget 
+retrieve-method: wget
 bootstrap: cd src;    ./configure DEF_PREFIX=$poccsrcdir/math/external/install NTL_GMP_LIP=on SHARED=on && LD_LIBRARY_PATH=$poccsrcdir/math/external/install/lib:$LD_LBRARY_PATH make && make install; cd -
 configure: disabled
 
