@@ -64,6 +64,7 @@ if POCC_HAS_HLS
 INCLUDES += \
 	$(ROSE_CPPFLAGS) $(BOOST_CPPFLAGS) \
 	-I$(install_prefix)/ir/install-hlsir/include			\
+	-I$(install_prefix)/hls/install-lotha/include			\
 	-I$(install_prefix)/math/install-barvinok/include		
 endif
 
@@ -126,7 +127,6 @@ libpocc_la_LIBADD	=						     \
   $(install_prefix)/math/install-isl/lib/libisl.la			     \
   $(install_prefix)/math/install-piplib-hybrid/lib/libpiplib64.la	     \
   $(install_prefix)/math/install-piplib-gmp/lib/libpiplib-gmp.la	     \
-  $(install_prefix)/math/install-polylib/lib/libpolylib64.la		     \
   $(install_prefix)/optimizers/install-letsee/lib/libletsee.la		     \
   $(install_prefix)/optimizers/install-pluto/lib/libpluto.la		     \
   $(install_prefix)/optimizers/install-pvectorizer/lib/libpvectorizer.la     \
@@ -152,8 +152,13 @@ endif
 
 if POCC_HAS_HLS
   libpocc_la_LIBADD	+=						     \
+  $(install_prefix)/math/install-polylib/lib/libpolylibgmp.la		     \
+  $(install_prefix)/hls/install-lotha/lib/liblotha.la	  		     \
   $(install_prefix)/ir/install-hlsir/lib/libhlsir.la	  		     \
   $(install_prefix)/math/install-barvinok/lib/libbarvinok.la		     
+else
+  libpocc_la_LIBADD	+=						     \
+  $(install_prefix)/math/install-polylib/lib/libpolylib64.la		     
 endif
 
 ## FIXME: Removed this due to a potential conflict on Solaris10. We
